--- a/app/views/checkout/new.html.haml
+++ b/app/views/checkout/new.html.haml
@@ -13,7 +13,7 @@
         .row-fluid
           .span12
             .box
-              %form#payment-form.form-horizontal{action: "#{checkout_process_url(:subdomain => nil, :protocol => 'https')}", method: "POST"}
+              = form_tag(checkout_process_url(:subdomain => nil, :protocol => 'https'), {method: 'post', id: 'payment-form', class: 'form-horizontal'}) do
                 .box-content
                   #MyWizard.wizard
                     %ul.steps
