--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,7 @@
     %meta{'http-equiv' => 'Content-Type', :content => 'text/html; charset=UTF-8'}/
     %meta{'charset' => 'utf-8'}/
     %meta{'name' => 'viewport', :content => 'width=device-width, initial-scale=1.0'}/
+    = csrf_meta_tag
     %title= full_title(yield(:title))
     = stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true
     = csrf_meta_tags
