--- a/app/views/stores/store_closed.html.haml
+++ b/app/views/stores/store_closed.html.haml
@@ -22,7 +22,7 @@
                   %h4= @store.closed_message
                   %p This store is currently closed. If the owner has given you the break-in password, enter it below.
                   %br
-                  %form.form-search#searchform{:method => "post", :action => break_in_store_path(@store)}
+                  = form_tag(break_in_store_path(@store), method: :post, class: 'form-search') do
                     = password_field_tag :break_in_password
                     %button.btn{:type => "submit"} Break In
                   %br
